# pfts

./: .buildinfo  .gitignore  Changelog.MD  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  pfts.html  pfts.util.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: development_workflow.yaml  generate_docs.yaml  placeholder_deployment
.github/workflows/setup_code/: action.yaml
_sources/: index.rst.txt  modules.rst.txt  pfts.rst.txt
docs/source/: conf.py  pfts.util.rst
pfts/util/: entrypoints.py  general.py  logging.py  parsing.py
tests/: test_util_general.py  test_util_logging.py  test_util_parsing.py  util.py
tests/data/: mock_init.txt
