[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pfts"
authors = [
    {name="Trinten Patten", email="trintenmpatten@gmail.com"}
]
description = "Collection of personal finance tools."
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Personal Usage",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Windows"
]
dynamic = ["readme","version"]
dependencies = [
    "build==1.2.2.post1",
    "coverage==7.8.0",
    "pytest==8.3.5",
    "setuptools==78.1.0",
    "sphinx==8.2.3",
    "pfts",
    "mypy==1.15.0",
    "bandit==1.8.3",
    "ruff==0.11.8",
]

[project.urls]
HomePage = "https://github.com/TrintenP/pfts"
Documentation = "https://github.com/TrintenP/pfts/wiki"
Issues = "https://github.com/TrintenP/pfts/issues"
ChangeLog = "https://github.com/TrintenP/pfts/blob/main/Changelog.MD"

[project.scripts]
generate-docs = "pfts.util.entrypoints:generate_documentation"
run-testing = "pfts.util.entrypoints:run_testing"
local-ci = "pfts.util.entrypoints:run_local_ci"
pfts = "pfts.util.entrypoints:run_pfts"
version-bump = "pfts.util.entrypoints:version_bump"

[gui_scripts]
# Launch the GUI command
# pt-launch-gui = 

[tool.uv.sources]
pfts = { workspace = true }

[tool.setuptools]
packages = ["pfts", "pfts.util"]

[tool.setuptools.dynamic]
version = {attr = "pfts.__version__"}
readme  = { file = ["README.MD"]}

[tool.bandit]
exclude_dirs = ['tests', ".venv"]

[tool.coverage.run]
source = [ "pfts" ]
omit = ["**/__init__.py", "**/entrypoints.py"]

[tool.mypy]
python_version = "3.13"
packages = ["pfts"]

[tool.pytest.ini_options]
pythonpath = "pfts"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py313"
respect-gitignore = true # Default value, just to making explict

[tool.ruff.lint]
select = ["W", "E", "F", "I"]
ignore = []
fixable = ["W", "E", "F", "I"]
unfixable = []

# Allows for unused variables if underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
